# Predicting-Insurance-Enrollment

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
src/: config.py  pipeline_process.py
src/data/: test_data.csv
src/notebook/: insurance_v3.ipynb
src/output_logistic/: final_model.pkl
