[project]
name = "insurance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.2",
    "joblib==1.3.2",
    "matplotlib==3.8.2",
    "numpy==1.26.3",
    "pandas==2.1.4",
    "pydantic==2.6.1",
    "python-multipart==0.0.9",
    "scikit-learn==1.3.2",
    "seaborn==0.13.1",
    "uvicorn==0.27.1",
]
